move sidebar to the right, add push count

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name" : "看看鄉民怎麼說?",
-  "version" : "1.0.5",
-  "description" : "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和C相關文章?",
+  "version" : "1.0.7",
+  "description" : "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
   "icons" : {
     "16" : "sandwich-16.png",
     "48" : "sandwich-48.png",
