--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name" : "看看鄉民怎麼說?",
-  "version" : "1.0.8",
+  "version" : "1.0.10",
   "description" : "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
   "icons" : {
     "16" : "sandwich-16.png",
@@ -17,8 +17,10 @@
           "https://tw.news.yahoo.com/*.html",
           "http://www.nownews.com/n/*",
           "https://www.nownews.com/n/*",
-          "http://www.chinatimes.com/realtimenews/*",
-          "https://www.chinatimes.com/realtimenews/*",
+          "http://*.chinatimes.com/realtimenews/*",
+          "https://*.chinatimes.com/realtimenews/*",
+          "http://www.chinatimes.com/newspapers/*",
+          "https://www.chinatimes.com/newspapers/*",
           "http://udn.com/*.shtml",
           "https://udn.com/*.shtml",
           "http://news.ltn.com.tw/news/*",
@@ -32,7 +34,8 @@
             "assets/fonts/*"
       ],
       "css": ["semantic.css", "plugin.css", "bbs.css"],
-      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js","semantic.min.js", "moment-with-langs.min.js", "URI.js", "contentscript.js"],
+      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js",
+              "semantic.js", "moment-with-langs.min.js", "URI.js", "contentscript.js"],
       "run_at" : "document_end",
       "all_frames" : false
     }
