--- a/ptt-plugin-firefox/package.json
+++ b/ptt-plugin-firefox/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "ptt-plugin-firefox",
-  "title": "ptt-plugin-firefox",
+  "name": "ptt-rocks",
+  "title": "看看鄉民怎麼說?",
   "id": "jid1-bJaqGJyp4wArCg",
-  "description": "a basic add-on",
-  "author": "",
+  "description": "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
+  "author": "changun",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "1.0.8",
+  "icon": "data/assets/images/sandwich-48.png",
+  "icon64": "data/assets/images/sandwich-128.png"
 }
