--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name" : "看看鄉民怎麼說?",
-  "version" : "1.0.10",
+  "version" : "1.0.11",
   "description" : "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
   "icons" : {
     "16" : "sandwich-16.png",
@@ -26,7 +26,9 @@
           "http://news.ltn.com.tw/news/*",
           "https://news.ltn.com.tw/news/*",
           "http://www.appledaily.com.tw/*/article/*",
-          "https://www.appledaily.com.tw/*/article/*"
+          "https://www.appledaily.com.tw/*/article/*",
+          "http://*.ettoday.net/news/*/*.htm",
+          "https://*.ettoday.net/news/*/*.htm"
 
       ],
       "web_accessible_resources": [
@@ -34,7 +36,7 @@
             "assets/fonts/*"
       ],
       "css": ["semantic.css", "plugin.css", "bbs.css"],
-      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js",
+      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js", "jsnumberformatter.js", "jquery.later.js",
               "semantic.js", "moment-with-langs.min.js", "URI.js", "contentscript.js"],
       "run_at" : "document_end",
       "all_frames" : false
