--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,7 @@
             "assets/fonts/*"
       ],
       "css": ["semantic.css", "plugin.css", "bbs.css"],
-      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js", "jsnumberformatter.js", "jquery.later.js",
+      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js",  "jquery.later.js",
               "semantic.js", "moment-with-langs.min.js", "URI.js", "contentscript.js"],
       "run_at" : "document_end",
       "all_frames" : false
