--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
   "version" : "1.0.12",
   "description" : "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
   "icons" : {
-    "16" : "sandwich-16.png",
-    "48" : "sandwich-48.png",
-    "128" : "sandwich-128.png"
+    "16" : "triplec-16.png",
+    "48" : "triplec-48.png",
+    "128" : "triplec-128.png"
   },
     "permissions": [
         "storage"
@@ -25,8 +25,8 @@
           "https://udn.com/*.shtml",
           "http://news.ltn.com.tw/news/*",
           "https://news.ltn.com.tw/news/*",
-          "http://www.appledaily.com.tw/*/article/*",
-          "https://www.appledaily.com.tw/*/article/*",
+          "http://*.appledaily.com.tw/*/article/*",
+          "https://*.appledaily.com.tw/*/article/*",
           "http://*.ettoday.net/news/*/*.htm",
           "https://*.ettoday.net/news/*/*.htm"
 
@@ -35,8 +35,9 @@
             "assets/images/*",
             "assets/fonts/*"
       ],
+      "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
       "css": ["semantic.css", "plugin.css", "bbs.css"],
-      "js" : ["jquery-2.1.3.min.js", "jquery.mousewheel.js",  "jquery.later.js",
+      "js" : ["ga.js","jquery-2.1.3.min.js", "jquery.mousewheel.js",  "jquery.later.js",
               "semantic.js", "moment-with-langs.min.js", "URI.js", "contentscript.js"],
       "run_at" : "document_end",
       "all_frames" : false
