--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name" : "看看鄉民怎麼說?",
-  "version" : "1.0.14",
+  "version" : "1.0.15",
   "description" : "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
   "icons" : {
     "16" : "triplec-16.png",
@@ -29,8 +29,8 @@
           "https://*.appledaily.com.tw/*/article/*",
           "http://*.ettoday.net/news/*/*.htm",
           "https://*.ettoday.net/news/*/*.htm",
-          "*://www.stormmediagroup.com/opencms/*/detail/*"
-
+          "*://www.stormmediagroup.com/opencms/*/detail/*",
+          "http://www.peoplenews.tw/news/*"  
       ],
       "web_accessible_resources": [
             "assets/images/*",
