--- a/ptt-plugin-firefox/package.json
+++ b/ptt-plugin-firefox/package.json
@@ -2,10 +2,11 @@
   "name": "ptt-rocks",
   "title": "看看鄉民怎麼說?",
   "id": "jid1-bJaqGJyp4wArCg",
-  "description": "讓你看各大新聞網時同時看ptt鄉民對新聞的討論和相關文章?",
+  "description": 
+  "這是你認識 PTT 的起點。不需要申請帳號，便可在各大新聞網站一邊看新聞，同時閱覽 PTT 的時事討論。",
   "author": "changun",
   "license": "MPL 2.0",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "icon": "data/assets/images/triplec-48.png",
   "icon64": "data/assets/images/triplec-128.png"
 }
