--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name" : "看看鄉民怎麼說?",
-  "version" : "1.0.30",
+  "version" : "1.0.32",
   "description" : "看新聞也要看重點，即時閱覽 PTT 掌握事件關鍵，不再被紛雜的爭吵淹沒。",
   "icons" : {
     "16" : "triplec-16.png",
@@ -12,7 +12,7 @@
     ],
   "content_scripts" : [
     {
-      "matches" : [ 
+      "matches" : [
          "http://tw.news.yahoo.com/*.html*",
           "https://tw.news.yahoo.com/*.html*",
           "http://www.nownews.com/n/*",
@@ -31,11 +31,15 @@
           "https://*.appledaily.com.tw/*/article/*",
           "http://*.ettoday.net/news/*/*.htm*",
           "https://*.ettoday.net/news/*/*.htm*",
+          "*://www.ptt.rocks/share/*",
           "*://www.storm.mg/article/*/*/*",
           "*://www.storm.mg/article/*",
           "*://www.peoplenews.tw/news/*",
           "*://newtalk.tw/news/*",
-          "*://www.mypeople.tw/*"
+          "*://www.mypeople.tw/*",
+          "*://www.cna.com.tw/*/*/*/*.aspx",
+          "*://www.cna.com.tw/*/*/*.aspx",
+          "*://news.rti.org.tw/news/detail/*"
       ],
       "exclude_globs" : [
         "*://www.mypeople.tw/category/news/*"
@@ -44,7 +48,7 @@
             "assets/images/*",
             "assets/fonts/*"
       ],
-      "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+      "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src https://connect.facebook.net; http://connect.facebook.net;",
       "css": ["semantic.css", "plugin.css", "bbs.css"],
       "js" : ["ga.js","jquery-2.1.3.min.js", "jquery.mousewheel.js",  "jquery.later.js",
               "semantic.js", "moment-with-langs.min.js", "URI.js", "contentscript.js"],
